# the-eye-of-the-typer

./: .dvcignore  .gitignore  README.md  dvc.yaml  etl.ipynb  gazefilter.ipynb  pyproject.toml  readme.ipynb  requirements.txt  rerun.ipynb  usage.py
.github/: copilot-instructions.md
data/: .gitignore  WebGazerETRA2018Dataset_Release20180420.zip.dvc  webGazerAlignment.csv.dvc
eott/: __init__.py  __main__.py  etl.py  raw.py  rerun.py  rerun_utils.py  util.py
eott_dataset/: __init__.py  characteristics.py  data.py  entries.py  etl.py  names.py  participant.py  reader.py  rerun.py  schemas.py  study.py  timeline.py  types.py  utils.py
eott_dataset/raw/: __init__.py  adjustments.py  etl.py  names.py  participant.py  schemas.py  utils.py
the_eye_of_the_typer/: __init__.py  characteristics.py  entries.py  participant.py  schemas.py  study.py  utils.py
