[project]
name = "eott"
version = "0.1.0"
description = "Extract-transform-load (ETL) framework for The Eye of the Typer Dataset"
readme = "README.md"
authors = [
    { name = "Rostyslav Bohomaz", email = "rostyslav.db@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "decord>=0.6,<0.7",
    "ffmpeg-python>=0.2,<0.3",
    "polars>=1.32",
    "rerun-sdk>=0.24,<0.25",
    "typer>=0.19,<0.20",
    "tzdata>=2025.2",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.1",
]

[tool.uv.build-backend]
module-root = ""

[tool.pyright]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportAny = false
reportExplicitAny = false
